dist/1.0/bin/sample/retrieveUnpackaged/objects/CTask_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capex_One__c</fullName>
        <description>Capex One-Off</description>
        <inlineHelpText>Capex One-Off</inlineHelpText>
        <label>Capex One-Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Re_useable__c</fullName>
        <description>Capex Re-useable</description>
        <inlineHelpText>Capex Re-useable</inlineHelpText>
        <label>Capex Re-useable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments to pricing line</description>
        <inlineHelpText>Add comments to pricing line</inlineHelpText>
        <label>Comments</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>Contract Length in months</description>
        <inlineHelpText>Contract Length in months. 
for Ask for = 1 year, Contract Length = 12
for Ask for = 2 years, Contract Length = 24
etc.</inlineHelpText>
        <label>Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Period</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Costing_Unit__c</fullName>
        <description>Same as CTask__c.Costing_unit__c</description>
        <label>Costing Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-net</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 5 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 8 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 -11 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - 14 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - 17 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 20 weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <description>Monthly Recurring Costs</description>
        <inlineHelpText>Monthly Recurring Costs</inlineHelpText>
        <label>MRC</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <description>Medium type from Request</description>
        <inlineHelpText>Medium type from Request</inlineHelpText>
        <label>Medium</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price__c</fullName>
        <description>Monthly Recuurring Price for Customer</description>
        <inlineHelpText>Monthly Recuurring Price for Customer</inlineHelpText>
        <label>MRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRC__c</fullName>
        <description>Non Recurring Costs</description>
        <inlineHelpText>Non Recurring Costs</inlineHelpText>
        <label>NRC</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Circuits__c</fullName>
        <label>No of Circuits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price__c</fullName>
        <description>Non Recurring Price for Customer</description>
        <inlineHelpText>Non Recurring Price for Customer</inlineHelpText>
        <label>NRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>Opex Monthly = Monthly Recurring Costs</description>
        <inlineHelpText>Opex Monthly = Monthly Recurring Costs</inlineHelpText>
        <label>Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_Off__c</fullName>
        <description>Opex One-Off = Non Recurring Costs</description>
        <inlineHelpText>Opex One-Off = Non Recurring Costs</inlineHelpText>
        <label>Opex One-Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selected_by_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pricing selected by Customer, should be checked only after Customer selects Firm Pricing</description>
        <inlineHelpText>Pricing selected by Customer, should be checked only after Customer selects Firm Pricing</inlineHelpText>
        <label>Selected by Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Task Pricings / Costings</relationshipLabel>
        <relationshipName>Task_Pricings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>if(No_of_Circuits__c !=0,No_of_Circuits__c * ( Contract_Length__c * MRC__c + NRC__c ),( Contract_Length__c * MRC__c + NRC__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>No_of_Circuits  *  ( Contract_Length  * MRC +  NRC )
Attention! - If &quot;Ask for&quot; = &quot;0 Years&quot; 12 months will be used to calculate Total Amount</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Capex__c</fullName>
        <description>Capex One-Off + Capex Re-useable</description>
        <inlineHelpText>Capex One-Off + Capex Re-useable</inlineHelpText>
        <label>Total Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Task Pricing</label>
    <nameField>
        <label>Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>